configuracion local funcionando

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,9 +2,9 @@ auxiliary.org-netbeans-modules-php-phpdoc.target=
 copy.src.files=false
 copy.src.target=
 index.file=index.php
-remote.connection=Linux
+remote.connection=missing-config
 remote.directory=/erp
 remote.permissions=true
 remote.upload=ON_SAVE
-run.as=REMOTE
+run.as=LOCAL
 url=http://localhost:81/freerisk2/web/
